# Grim

./: .gitignore  Cargo.toml  README.md
src/: interpreter.rs  language_runner.rs  main.rs  parsing.rs  script.grim
src/examples/: assignment.grim  collatz.grim  factorial.grim  function.grim  input.grim  loop.grim  recursion.grim  scope.grim  script.grim
src/interpreter/: error_reporting.rs  expression_evaluator.rs  interpreter.rs
src/language_runner/: run_language.rs
src/parsing/: ast.rs  grammar.lalrpop  lexer.rs  parser.rs
