[package]
name = "Grim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
lalrpop-util = "0.20.2"
ariadne = "0.4.1"
colored = "2.1.0"

[build-dependencies]
lalrpop = { version = "0.20.2", features = ["lexer"] }

